--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,13 +1,28 @@
-button {
-  font-size: 14px;
+button.btn{
+	display: inline-block;
+	padding:  0.375rem 0.75rem;
+	font-size: 1rem;
+	font-weight: 400;
+	line-height: 1.5;
+	text-align: center;
+	text-decoration: none;
+	vertical-align: middle;
+	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	user-select: none;
+	border: 1px solid transparent;
+	border-radius: 0.375rem;
+	background-color: transparent;
+	transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
-button.primary{
-	background-color: darkcyan;
+button.btn-primary{
+	background-color: #cff4fc;
 	color: #444;
 }
 
-button.secondary{
+button.btn-secondary{
 	background-color: rgb(132, 0, 255);
 	color: rgb(255, 255, 255);
 }
